# walli-api

./: .gitignore  .travis.yml  Makefile  README.md  app.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
tests/: base.py  config.py  test_about.py  test_chains.py  test_config.py  test_tables.py
tests/docker/: Dockerfile  walli-api.conf
walli/: __init__.py  config.py
walli/controller/: __init__.py  about_controller.py
walli/tests/: base.py  test_about.py  test_config.py
walli_api/: config.py
walli_api/controller/: __init__.py  chains_controller.py  tables_controller.py
walli_api/service/: chain_service.py  table_service.py
walli_api/utils/: dto.py  exceptions.py
