[tool.poetry]
name = "walli_api"
version = "0.0.1"
description = "A Restful API for managing iptables, a linux firewall."
authors = ["Hamza ESSAYEGH <hamza.essayegh@protonmail.com>"]
license = "Apache 2.0"
repository = "https://github.com/aeliant/walli-api"
homepage = "https://github.com/aeliant/walli-api"
keywords = ["linux", "firewall", "iptables", "ipv4", "ipv6", "rest", "api", "flask"]

[tool.poetry.dependencies]
python = "~3.4"
flask = "^1.0.2"
flask-restplus = "^0.12.1"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
coverage = "^4.5.3"
factory_boy = "^2.11.1"
flask_testing = "^0.7.1"
